--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,11 @@
-# Financial Intelligence System - Dependencies
+yfinance>=0.2.28
+pandas>=2.0.0
+numpy>=1.24.0
+langgraph>=0.0.20
+langchain-core>=0.1.0
+langchain-google-genai>=0.0.6
+pydantic>=2.0.0
+python-dotenv>=1.0.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
 
-# Web Framework
-Flask
-Flask-CORS
-Werkzeug
-
-# Environment & Configuration
-python-dotenv
-
-# Data Science & Analysis
-pandas
-numpy
-scipy
-statsmodels
-
-# Machine Learning
-scikit-learn
-
-# Financial Data APIs
-yfinance
-requests
-
-# LLM Integration
-google-generativeai
-
-# Database
-SQLAlchemy
-
-# Utilities
-python-dateutil
-pytz
